# torch-training

./: .gitignore  README.md  pyproject.toml
environments/: Dockerfile
environments/ci/: docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
src/torch_training/: __init__.py  config.py  ignite-cifar10.py  ignite-ffcv-cifar10.py  ignite-mnist.py  ignite_cifar10.py  ignite_ffcv_cifar10.py
